# KrystaliumMicroscope

./: README.md  config.yml  csv2dict.py  main.py  pyproject.toml  seteffect.py  setup_virtual_serial.sh
arduino/Rotary/: Rotary.ino
autotests/: test_api.py
krystalium/: __init__.py  api.py  effect_table.py  medical.py  number_input.py  rfid.py  serialcontroller.py  types.py  unreal.py
