[tool.poetry]
name = "krystaliummicroscope"
version = "0.1.0"
description = "Medical microscope for Krystalium"
authors = ["Arjen Hiemstra <ahiemstra@heimr.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"
pyserial = "^3.5"
async-lru = "^2.0.4"
#dependency-injector = "^4.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-pyserial = "^3.5.0.20250130"
types-aiofiles = "^24.1.0.20241221"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
